fix internal links scrolling behind header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html { 
+  scroll-padding-top: 90px;
+} 
+
 .bg-radial-red-cyan {
   background-image: radial-gradient(
     50% 50% at 50% 50%,
@@ -10,3 +14,4 @@
     rgba(255, 255, 255, 0.1) 100%
   );
 }
+
